Extract web client