@@ -4,6 +4,7 @@ import com.serkowski.orderservice.dto.request.OrderItemRequestDto;
 import com.serkowski.orderservice.dto.request.OrderRequest;
 import com.serkowski.orderservice.dto.request.ReserveItemsDto;
 import com.serkowski.orderservice.dto.response.OrderResponse;
+import com.serkowski.orderservice.model.OrderItem;
 import com.serkowski.orderservice.model.OrderSummary;
 import com.serkowski.orderservice.model.State;
 import com.serkowski.orderservice.model.error.OrderNotFound;
@@ -11,6 +12,7 @@ import com.serkowski.orderservice.repository.read.OrderReadRepository;
 import com.serkowski.orderservice.repository.write.OrderWriteRepository;
 import com.serkowski.orderservice.service.api.OrderMapper;
 import com.serkowski.orderservice.service.api.OrderService;
+import com.serkowski.orderservice.service.api.ProductService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.cloud.client.discovery.DiscoveryClient;
@@ -19,6 +21,9 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.reactive.function.BodyInserters;
 import org.springframework.web.reactive.function.client.WebClient;
+import reactor.core.publisher.Mono;
+
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,30 +34,17 @@ public class OrderServiceImpl implements OrderService {
     private final OrderWriteRepository orderWriteRepository;
     private final OrderReadRepository orderReadRepository;
     private final OrderMapper orderMapper;
-    private final WebClient.Builder webClientBuilder;
-    private final DiscoveryClient discoveryClient;
+    private final ProductService productService;
 
     @Override
-    public OrderResponse placeOrderDraft(OrderRequest orderRequest) {
+    public Mono<OrderResponse> placeOrderDraft(OrderRequest orderRequest) {
         OrderSummary orderSummary = orderWriteRepository.save(orderMapper.map(orderRequest, State.DRAFT));
 
-        webClientBuilder.build().post()
-                .uri(getProductUri() + "/api/product/items/reserve")
-                .contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON)
-                .body(BodyInserters.fromValue(ReserveItemsDto.builder()
-                        .ids(orderRequest.getOrderItems().stream().map(OrderItemRequestDto::getItemRef).toList())
-                        .build()))
-                .retrieve()
-                .bodyToMono(String.class)
-                .toFuture()
-                .thenAccept(response -> log.info("Reserve items response: " + response));
-
-        return orderMapper.map(orderSummary);
-    }
-
-    private String getProductUri() {
-        return discoveryClient.getInstances("PRODUCT-SERVICE").get(0).getUri().toString();
+        return productService.reserveItems(orderSummary.getOrderLineItemsList().stream().map(OrderItem::getItemRef).collect(Collectors.toList()))
+                .map(result -> {
+                        log.info("Response of reserve items: " + result);
+                        return orderMapper.map(orderSummary);
+                });
     }
 
     @Override
